# BsPatch

./: README.md
BsPatch/app/: CMakeLists.txt  build.gradle
BsPatch/app/src/androidTest/java/com/mg/axechen/bspatch/: ExampleInstrumentedTest.java
BsPatch/app/src/main/: AndroidManifest.xml
BsPatch/app/src/main/cpp/: bspatch.c  com_mg_axechen_bspatch_BsPatch.h
BsPatch/app/src/main/cpp/bzip2/: spewG.c
BsPatch/app/src/main/java/com/mg/axechen/bspatch/: APKUtils.java  BsPatch.java  Contants.java  MainActivity.java
BsPatch/app/src/main/res/layout/: activity_main.xml
BsPatch/app/src/test/java/com/mg/axechen/bspatch/: ExampleUnitTest.java
BsPatch/gradle/wrapper/: gradle-wrapper.properties
apk/: apk.patch  new.apk  old.apk
